"About me" info update

--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hi, I'm Dawid Rogala, an IT Ops professional, currently learning DevOps technologies. I'm passionate about automations and have a strong track record in various IT roles.</p>
+            <p>Currently, I work at Nordea as a Senior IT Analyst, where I'm responsible for IT Ops/little bit of DevOps on two projects. My duties include maintaining daily operations, monitoring, deployment of new releases, and automation of processes. I also work closely with business and developers in a Scrum-driven team.</p>
         </section>
     </body>
 </html>
