--- a/main.html
+++ b/main.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Dawid Rogala - IT Ops/IT DevOps Professional</title>
+        <style>
+            body {
+                background-color: #333;
+                color: #fff;
+            }
+        </style>
     </head>
 
     <body>
