--- a/contactInfo.html
+++ b/contactInfo.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Contact Information</title>
+        <style>
+            body {
+                background-color: #333;
+                color: #fff;
+            }
+        </style>
     </head>
 
     <body>
