--- a/experience.html
+++ b/experience.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Work Experience</title>
+        <style>
+            body {
+                background-color: #333;
+                color: #fff;
+            }
+        </style>
     </head>
 
     <body>
