--- a/experience.html
+++ b/experience.html
@@ -2,10 +2,104 @@
 <html>
     <head>
         <title>Work Experience</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
+                font-family: Arial, sans-serif;
                 background-color: #333;
                 color: #fff;
+                margin: 0;
+                padding: 0;
+            }
+
+            header {
+                background-color: #222;
+                padding: 20px;
+                text-align: center;
+            }
+
+            header h1 {
+                font-size: 32px;
+                margin: 0;
+            }
+
+            nav {
+                background-color: #444;
+                padding: 10px 0;
+                text-align: center;
+            }
+
+            nav ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            nav li {
+                display: inline;
+                margin: 0 20px;
+            }
+
+            a {
+                text-decoration: none;
+                color: #fff;
+                font-weight: bold;
+                padding: 10px 20px;
+                border: 2px solid #888;
+                background-color: #555;
+                border-radius: 5px;
+                transition: background-color 0.3s;
+            }
+
+            a:hover {
+                background-color: #444;
+            }
+
+            section {
+                padding: 20px;
+                max-width: 800px; /* Limit content width on larger screens */
+                margin: 0 auto; /* Center content horizontally */
+            }
+
+            section h2 {
+                font-size: 24px;
+            }
+
+            section ul {
+                list-style: disc;
+                padding-left: 20px;
+            }
+
+            section li {
+                margin: 10px 0;
+            }
+
+            /* Responsive styles for smaller screens */
+            @media (max-width: 768px) {
+                header h1 {
+                    font-size: 24px;
+                }
+
+                nav ul {
+                    display: block;
+                }
+
+                nav li {
+                    display: block;
+                    margin: 10px 0;
+                }
+
+                a {
+                    padding: 10px 20px;
+                }
+
+                section {
+                    padding: 10px;
+                }
+
+                section h2 {
+                    font-size: 20px;
+                }
             }
         </style>
     </head>
@@ -17,48 +111,48 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="main.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
-                <li><a href="#experience">Work Experience</a></li>
-                <li><a href="contact.html">Contact Information</a></li>
+                <li><a href="experience.html">Work Experience</a></li>
+                <li><a href="contactInfo.html">Contact Information</a></li>
             </ul>
         </nav>
 
         <section id="experience">
-            <h2>Work Experience</h2>
+            <h2>Work Experience<br></h2>
 
             <h3>Senior IT Analyst at Nordea (Jan 2023 - Present)</h3>
-            <p>IT Ops on 2 projects</p>
-            <p>Responsible for maintaining continuity of daily operations and monitoring</p>
-            <p>Deployment of new releases on Production and PreProduction environments</p>
-            <p>Simple MSSQL/Oracle databases operations</p>
-            <p>Automation of all daily processes</p>
-            <p>Part of Scrum driven teams</p>
-            <p>Working close with business and developers</p>
+            <li>IT Ops on 2 projects</li>
+            <li>Responsible for maintaining continuity of daily operations and monitoring</li>
+            <li>Deployment of new releases on Production and PreProduction environments</li>
+            <li>Simple MSSQL/Oracle databases operations</li>
+            <li>Automation of all daily processes</li>
+            <li>Part of Scrum driven teams</li>
+            <li>Working close with business and developers</li><br>
 
             <h4>Team Lead in SaaS Monitoring/Associate SaaS Technician at Banqsoft (Jan 2021 - Dec 2022)</h4>
-            <p>Maintaining service continuity of delivered applications and automations</p>
-            <p>Automation of several processes and monitoring</p>
-            <p>Monitoring of services, applications and automations</p>
-            <p>Deployment of new application versions in various environments (from Test to Production)</p>
-            <p>Part of projects enrolling new customers</p>
-            <p>Technical based communication with multiple customers regarding provided solutions, automations and monitoring</p>
-            <p>Technical Account Manager role for 2 customers</p>
-            <p>Configuration and setup of monitoring</p>
-            <p>Team Lead for SaaS Monitoring team</p>
+            <li>Maintaining service continuity of delivered applications and automations</li>
+            <li>Automation of several processes and monitoring</li>
+            <li>Monitoring of services, applications and automations</li>
+            <li>Deployment of new application versions in various environments (from Test to Production)</li>
+            <li>Part of projects enrolling new customers</li>
+            <li>Technical based communication with multiple customers regarding provided solutions, automations and monitoring</li>
+            <li>Technical Account Manager role for 2 customers</li>
+            <li>Configuration and setup of monitoring</li>
+            <li>Team Lead for SaaS Monitoring team</li><br>
 
             <h5>SD IT Administrator L1 at Wipro Limited (Sep 2019 - Dec 2020)</h5>
-            <p>SD Administrator on 1st line of IT Support in project Novartis</p>
+            <li>SD Administrator on 1st line of IT Support in project Novartis</li><br>
 
             <h6>L2 End User Support Specialist at Hemmersbach (Oct 2018 - Sep 2019)</h6>
-            <p>Local IT and second line of IT support for EMEA region in project IBM-StateStreet</p>
-            <p>Remote and local user support for banking sector with all installation, configuration and application issue solving break-fix</p>
-            <p>Partial Active Directory groups management</p>
-            <p>Troubleshooting and solving all of the applications and issues/external devices in Windows</p>
-            <p>Using tools as remotecontrol, remote desktop connection, ServiceNOW, Active Directory, ADTool, SMS tool, SCCM, VMWare, VSphere, Virtual Desktop Infrastructure (VDI), Citrix Director etc.</p>
-            <p>Hardware and software configuration for new hires and current users related with location</p>
-            <p>Deskside/onsite support of over 1500 users</p>
-            <p>Multitasking and work with SLA's and customer satisfaction</p>
+            <li>Local IT and second line of IT support for EMEA region in project IBM-StateStreet</li>
+            <li>Remote and local user support for banking sector with all installation, configuration and application issue solving break-fix</li>
+            <li>Partial Active Directory groups management</li>
+            <li>Troubleshooting and solving all of the applications and issues/external devices in Windows</li>
+            <li>Using tools as remotecontrol, remote desktop connection, ServiceNOW, Active Directory, ADTool, SMS tool, SCCM, VMWare, VSphere, Virtual Desktop Infrastructure (VDI), Citrix Director etc.</li>
+            <li>Hardware and software configuration for new hires and current users related with location</li>
+            <li>Deskside/onsite support of over 1500 users</li>
+            <li>Multitasking and work with SLA's and customer satisfaction</li>
         </section>
     </body>
 </html>
