--- a/contactInfo.html
+++ b/contactInfo.html
@@ -1,34 +1,128 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Contact Information</title>
-        <style>
-            body {
-                background-color: #333;
-                color: #fff;
+<head>
+    <title>Contact Information</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #333;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #222;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 32px;
+            margin: 0;
+        }
+
+        nav {
+            background-color: #444;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: 2px solid #888;
+            background-color: #555;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        a:hover {
+            background-color: #444;
+        }
+
+        section {
+            padding: 20px;
+            max-width: 800px; /* Limit content width on larger screens */
+            margin: 0 auto; /* Center content horizontally */
+        }
+
+        section h2 {
+            font-size: 24px;
+        }
+
+        section ul {
+            list-style: disc;
+            padding-left: 20px;
+        }
+
+        section li {
+            margin: 10px 0;
+        }
+
+        /* Responsive styles for smaller screens */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 24px;
             }
-        </style>
-    </head>
 
-    <body>
-        <header>
-            <h1>Contact Information</h1>
-        </header>
+            nav ul {
+                display: block;
+            }
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="experience.html">Work Experience</a></li>
-                <li><a href="#contact">Contact Information</a></li>
-            </ul>
-        </nav>
+            nav li {
+                display: block;
+                margin: 10px 0;
+            }
 
-        <section id="contact">
-            <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:d.rogala.95@gmail.com">d.rogala.95@gmail.com</a><br>
-            Mobile: +48 694 936 621<br>
-            LinkedIN: <a href="https://www.linkedin.com/in/dawid-rogala-7ba259179/">Dawid Rogala</a></p>
-        </section>
-    </body>
+            a {
+                padding: 10px 20px;
+            }
+
+            section {
+                padding: 10px;
+            }
+
+            section h2 {
+                font-size: 20px;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Contact Information</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="main.html">Home</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Work Experience</a></li>
+            <li><a href="contactInfo.html">Contact Information</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>Contact Information</h2>
+        <p>Email: <a href="mailto:d.rogala.95@gmail.com" style="background: none; border: none; padding: 0; font-weight: bold; text-decoration: underline;">d.rogala.95@gmail.com</a><br>
+        Mobile: +48 694 936 621<br>
+        LinkedIN: <a href="https://www.linkedin.com/in/dawid-rogala-7ba259179" style="background: none; border: none; padding: 0; font-weight: bold; text-decoration: underline;">Dawid Rogala</a></p>
+    </section>
+</body>
 </html>
