--- a/education.html
+++ b/education.html
@@ -2,10 +2,104 @@
 <html>
     <head>
         <title>Education</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
+                font-family: Arial, sans-serif;
                 background-color: #333;
                 color: #fff;
+                margin: 0;
+                padding: 0;
+            }
+
+            header {
+                background-color: #222;
+                padding: 20px;
+                text-align: center;
+            }
+
+            header h1 {
+                font-size: 32px;
+                margin: 0;
+            }
+
+            nav {
+                background-color: #444;
+                padding: 10px 0;
+                text-align: center;
+            }
+
+            nav ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            nav li {
+                display: inline;
+                margin: 0 20px;
+            }
+
+            a {
+                text-decoration: none;
+                color: #fff;
+                font-weight: bold;
+                padding: 10px 20px;
+                border: 2px solid #888;
+                background-color: #555;
+                border-radius: 5px;
+                transition: background-color 0.3s;
+            }
+
+            a:hover {
+                background-color: #444;
+            }
+
+            section {
+                padding: 20px;
+                max-width: 800px; /* Limit content width on larger screens */
+                margin: 0 auto; /* Center content horizontally */
+            }
+
+            section h2 {
+                font-size: 24px;
+            }
+
+            section ul {
+                list-style: disc;
+                padding-left: 20px;
+            }
+
+            section li {
+                margin: 10px 0;
+            }
+
+            /* Responsive styles for smaller screens */
+            @media (max-width: 768px) {
+                header h1 {
+                    font-size: 24px;
+                }
+
+                nav ul {
+                    display: block;
+                }
+
+                nav li {
+                    display: block;
+                    margin: 10px 0;
+                }
+
+                a {
+                    padding: 10px 20px;
+                }
+
+                section {
+                    padding: 10px;
+                }
+
+                section h2 {
+                    font-size: 20px;
+                }
             }
         </style>
     </head>
@@ -17,10 +111,10 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#education">Education</a></li>
+                <li><a href="main.html">Home</a></li>
+                <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Work Experience</a></li>
-                <li><a href="contact.html">Contact Information</a></li>
+                <li><a href="contactInfo.html">Contact Information</a></li>
             </ul>
         </nav>
 
