--- a/experience.html
+++ b/experience.html
@@ -136,7 +136,7 @@
             <li>Monitoring of services, applications and automations</li>
             <li>Deployment of new application versions in various environments (from Test to Production)</li>
             <li>Part of projects enrolling new customers</li>
-            <li>Technical based communication with multiple customers regarding provided solutions, automations and monitoring</li>
+            <li>Technical based communication with customers regarding provided solutions, automations and monitoring</li>
             <li>Technical Account Manager role for 2 customers</li>
             <li>Configuration and setup of monitoring</li>
             <li>Team Lead for SaaS Monitoring team</li><br>
