--- a/contactInfo.html
+++ b/contactInfo.html
@@ -6,25 +6,26 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #333;
+            background-color: #333; /* Dark background color */
             color: #fff;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #222;
+            background-color: #24292e; /* GitHub-like header background color */
             padding: 20px;
             text-align: center;
         }
 
         header h1 {
-            font-size: 32px;
+            font-size: 36px;
             margin: 0;
+            color: #fff;
         }
 
         nav {
-            background-color: #444;
+            background-color: #444; /* Dark navigation bar background color */
             padding: 10px 0;
             text-align: center;
         }
@@ -44,8 +45,8 @@
             text-decoration: none;
             color: #fff;
             font-weight: bold;
-            padding: 10px 20px;
-            border: 2px solid #888;
+            padding: 8px 16px;
+            border: 1px solid #888;
             background-color: #555;
             border-radius: 5px;
             transition: background-color 0.3s;
@@ -57,27 +58,39 @@
 
         section {
             padding: 20px;
-            max-width: 800px; /* Limit content width on larger screens */
-            margin: 0 auto; /* Center content horizontally */
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #444; /* Light gray background for content */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Box shadow for the content area */
+            position: relative; /* Position the section element */
+            top: 20px; /* Adjust the value to move it lower */
         }
 
-        section h2 {
-            font-size: 24px;
+        h2 {
+            font-size: 26px; /* Larger header font size for h2 */
+            color: #fff;
         }
 
-        section ul {
+        h3 {
+            font-size: 18px; /* Smaller header font size for h3 */
+            color: #fff;
+        }
+
+        ul {
             list-style: disc;
-            padding-left: 20px;
+            padding-left: 14px;
         }
 
-        section li {
+        li {
             margin: 10px 0;
+            font-size: 14px; /* Larger font size for content */
         }
 
         /* Responsive styles for smaller screens */
         @media (max-width: 768px) {
             header h1 {
-                font-size: 24px;
+                font-size: 30px; /* Slightly smaller for smaller screens */
             }
 
             nav ul {
@@ -97,8 +110,16 @@
                 padding: 10px;
             }
 
-            section h2 {
-                font-size: 20px;
+            h2 {
+                font-size: 24px; /* Smaller font size for h2 on smaller screens */
+            }
+
+            h3 {
+                font-size: 20px; /* Smaller font size for h3 on smaller screens */
+            }
+
+            li {
+                font-size: 16px; /* Smaller font size for content on smaller screens */
             }
         }
     </style>
