--- a/education.html
+++ b/education.html
@@ -1,131 +1,151 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Education</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #333;
-                color: #fff;
-                margin: 0;
-                padding: 0;
-            }
+<head>
+    <title>Education</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #333; /* Dark background color */
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
 
-            header {
-                background-color: #222;
-                padding: 20px;
-                text-align: center;
-            }
+        header {
+            background-color: #24292e; /* GitHub-like header background color */
+            padding: 20px;
+            text-align: center;
+        }
 
+        header h1 {
+            font-size: 36px;
+            margin: 0;
+            color: #fff;
+        }
+
+        nav {
+            background-color: #444; /* Dark navigation bar background color */
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            padding: 8px 16px;
+            border: 1px solid #888;
+            background-color: #555;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        a:hover {
+            background-color: #444;
+        }
+
+        section {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #444; /* Light gray background for content */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Box shadow for the content area */
+            position: relative; /* Position the section element */
+            top: 20px; /* Adjust the value to move it lower */
+        }
+
+        h2 {
+            font-size: 26px; /* Larger header font size for h2 */
+            color: #fff;
+        }
+
+        h3 {
+            font-size: 18px; /* Smaller header font size for h3 */
+            color: #fff;
+        }
+
+        ul {
+            list-style: disc;
+            padding-left: 14px;
+        }
+
+        li {
+            margin: 10px 0;
+            font-size: 14px; /* Larger font size for content */
+        }
+
+        /* Responsive styles for smaller screens */
+        @media (max-width: 768px) {
             header h1 {
-                font-size: 32px;
-                margin: 0;
-            }
-
-            nav {
-                background-color: #444;
-                padding: 10px 0;
-                text-align: center;
+                font-size: 30px; /* Slightly smaller for smaller screens */
             }
 
             nav ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
+                display: block;
             }
 
             nav li {
-                display: inline;
-                margin: 0 20px;
-            }
-
-            a {
-                text-decoration: none;
-                color: #fff;
-                font-weight: bold;
-                padding: 10px 20px;
-                border: 2px solid #888;
-                background-color: #555;
-                border-radius: 5px;
-                transition: background-color 0.3s;
-            }
-
-            a:hover {
-                background-color: #444;
-            }
-
-            section {
-                padding: 20px;
-                max-width: 800px; /* Limit content width on larger screens */
-                margin: 0 auto; /* Center content horizontally */
-            }
-
-            section h2 {
-                font-size: 24px;
-            }
-
-            section ul {
-                list-style: disc;
-                padding-left: 20px;
-            }
-
-            section li {
+                display: block;
                 margin: 10px 0;
             }
 
-            /* Responsive styles for smaller screens */
-            @media (max-width: 768px) {
-                header h1 {
-                    font-size: 24px;
-                }
-
-                nav ul {
-                    display: block;
-                }
-
-                nav li {
-                    display: block;
-                    margin: 10px 0;
-                }
-
-                a {
-                    padding: 10px 20px;
-                }
-
-                section {
-                    padding: 10px;
-                }
-
-                section h2 {
-                    font-size: 20px;
-                }
+            a {
+                padding: 10px 20px;
             }
-        </style>
-    </head>
 
-    <body>
-        <header>
-            <h1>My Education</h1>
-        </header>
+            section {
+                padding: 10px;
+            }
 
-        <nav>
-            <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="experience.html">Work Experience</a></li>
-                <li><a href="contactInfo.html">Contact Information</a></li>
-            </ul>
-        </nav>
+            h2 {
+                font-size: 24px; /* Smaller font size for h2 on smaller screens */
+            }
 
-        <section id="education">
-            <h2>Education</h2>
-            <ul>
-                <li>WSB Merito Gdańsk University (2019-2020)</li>
-                <p>Post-graduate diploma, Mobile applications programmer</p>
-                <li>WSB Merito Gdańsk University (2016-2019)</li>
-                <p>Bachelor's degree in Management with specialization in psychology in business</p>
-            </ul>
-        </section>
-    </body>
+            h3 {
+                font-size: 20px; /* Smaller font size for h3 on smaller screens */
+            }
+
+            li {
+                font-size: 16px; /* Smaller font size for content on smaller screens */
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>My Education</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="main.html">Home</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Work Experience</a></li>
+            <li><a href="contactInfo.html">Contact Information</a></li>
+        </ul>
+    </nav>
+
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>WSB Merito Gdańsk University (2019-2020)</li>
+            <p>Post-graduate diploma, Mobile applications programmer</p>
+            <li>WSB Merito Gdańsk University (2016-2019)</li>
+            <p>Bachelor's degree in Management with specialization in psychology in business</p>
+        </ul>
+    </section>
+</body>
 </html>
