--- a/experience.html
+++ b/experience.html
@@ -131,7 +131,7 @@
 
     <nav>
         <ul>
-            <li><a href="main.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="contactInfo.html">Contact Information</a></li>
