--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <nav>
             <ul>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Work Experience</a></li>
                 <li><a href="contactInfo.html">Contact Information</a></li>
