--- a/contactInfo.html
+++ b/contactInfo.html
@@ -94,6 +94,7 @@
             }
 
             nav ul {
+                text-align: center; /* Center-align the list items */
                 display: block;
             }
 
@@ -103,7 +104,8 @@
             }
 
             a {
-                padding: 10px 20px;
+                padding: 4px 10px; /* Adjust the padding to make buttons smaller */
+                font-size: 12px; /* Adjust the font size to make buttons smaller */
             }
 
             section {
